--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  text-align: left;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .App-logo {
@@ -14,14 +16,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  /* background-color: #282c34; */
+  background-color: white;
+  /* min-height: 100vh; */
+  /* display: flex; */
+  /* flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #2a2a2a;
+  border-bottom: 1px solid #000;
 }
 
 .App-link {
